--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,4 +34,4 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          echo "Secret at Repo level" ${{ secrets.REPO_SECRET_1 }}
+          echo  ${{ secrets.REPO_SECRET_1 }}
