--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,9 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
+        env: 
+          WHO_TO_TRUST: ${{ secrets.REPO_SECRET_1 }}
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          echo  ${{ secrets.REPO_SECRET_1 }}
+          echo  ${WHO_TO_TRUST}
